# networking-generic-switch

./: .ci-operator.yaml  .gitignore  .gitreview  .pre-commit-config.yaml  .stestr.conf  .testr.conf  CONTRIBUTING.rst  README.rst  lower-constraints.txt  openstack-ngs-tester.Dockerfile  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
devstack/: exercise.py  exercise.sh  plugin.sh  settings
devstack/upgrade/: resources.sh  settings  upgrade.sh
doc/: requirements.txt
doc/source/: admin.rst  compatible-devices.rst  conf.py  configuration.rst  index.rst  installation.rst  netmiko-device-commands.rst  supported-devices.rst  troubleshooting.rst
doc/source/_exts/: netmiko_device_commands.py
doc/source/dev/: dev-quickstart.rst
doc/source/include/: configure-neutron.rst
etc/neutron/plugins/ml2/: ml2_conf_genericswitch.ini.sample
generic_switch/: generic_switch_mech.py
networking_generic_switch/: _i18n.py  batching.py  config.py  exceptions.py  generic_switch_mech.py  generic_switch_sg.py  locking.py  trunk_driver.py  utils.py
networking_generic_switch/devices/: __init__.py  cisco_ios.py  ovs_linux.py  utils.py
networking_generic_switch/devices/corsa_devices/: __init__.py  corsa2100.py  corsavfc.py
networking_generic_switch/devices/netmiko_devices/: __init__.py  arista.py  aruba.py  brocade.py  cisco.py  cisco300.py  cumulus.py  dell.py  dell_fnioa.py  fake.py  hp.py  hpe.py  huawei.py  huawei_vrpv8.py  juniper.py  mellanox_mlnxos.py  nokia.py  ovs.py  pluribus.py  ruijie.py  smc.py  sonic.py
networking_generic_switch/netconf_models/: constants.py  utils.py
networking_generic_switch/netconf_models/openconfig/: constants.py
networking_generic_switch/netconf_models/openconfig/interfaces/: aggregate.py  ethernet.py  interfaces.py  types.py
networking_generic_switch/netconf_models/openconfig/lacp/: lacp.py  types.py
networking_generic_switch/netconf_models/openconfig/network_instance/: network_instance.py
networking_generic_switch/netconf_models/openconfig/vlan/: types.py  vlan.py
networking_generic_switch/tests/unit/: test_base_switch.py  test_batching.py  test_cisco_ios.py  test_config.py  test_devices.py  test_generic_switch_mech.py  test_generic_switch_sg.py  test_locking.py  test_ovs_linux.py
networking_generic_switch/tests/unit/devices/: test_utils.py
networking_generic_switch/tests/unit/netmiko/: test_arista_eos.py  test_aruba.py  test_brocade_fastiron.py  test_cisco_300.py  test_cisco_ios.py  test_cisco_nxos.py  test_cumulus.py  test_cumulus_nvue.py  test_cumulus_nvue_multicast.py  test_dell.py  test_huawei.py  test_huawei_vrpv8.py  test_juniper.py  test_netmiko_base.py  test_nokia_srl.py  test_ovs_linux.py  test_pluribus.py  test_smc.py  test_sonic.py
networking_generic_switch/tests/unit/openconfig/: test_interfaces.py  test_lacp.py  test_network_instance.py  test_vlan.py
playbooks/legacy/networking-generic-switch-tempest-dsvm/: run.yaml
playbooks/legacy/networking-generic-switch-tempest-dsvm-dlm/: run.yaml
releasenotes/notes/: add-aruba-error-checking-812aa4dba14d5079.yaml  add-aruba-support-463a90b0b150b9af.yaml  add-cisco-nx-os-support-8046a33107e2a670.yaml  add-cumulus-nclu-support-ddcffa604c3e1b18.yaml  add-cumulus-nvue-support-2207d67edc12e866.yaml  add-default-vlan-parameter-c614b798f45f9973.yaml  add-dell-error-checking-28809170596cccda.yaml  add-dellos10-support-c6426372f960ded4.yaml  add-initial-note-ae1c9f9709c2e66f.yaml  add-mellanox-mlnx-os-switch-support-a4bf0661cd27fec7.yaml  add-ngs_save_configuration-180c2145f08e54d2.yaml  add-ngs_ssh_disabled_algorithms-dfe3e805f480ce90.yaml  add-sonic-os-switch-support-73fcaf3acdc8c1d0.yaml  add-ssh-connection-reuse-hash.yaml  add-supermicro-support-8cc6c6b2265e474b.yaml  add-switchmode-option-to-dell-powerconnect-87718a84430444ef.yaml  add-vlan-and-port-allowlist-0b1c29967210fbfb.yaml  add_alias_for_hpe_comware-0eb9a016f0c992df.yaml  add_netmiko_hpe_comware_device-c39be5d96943c6fd.yaml  add_ngs_default_vlan-ab09e0f4fd7ce897.yaml  arista-bond-trunk-4a376a636f899173.yaml  arista-enable-disable-port-204c6253992b3fb0.yaml  arista-eos-create-vlan-before-vxlan-ee9d25ac89ae8aa4.yaml  arista-eos-multicast-bum-replication-a8b3c4d5e6f7a8b9.yaml  arista-eos-redistribute-learned-f405bc54dbe4abf4.yaml  arista-eos-route-target-auto-fix-cb57b540b38ac7c4.yaml  arista-eos-vxlan-interface-cleanup-fix-e557f5f2c3006c77.yaml  arista-eos-vxlan-vlan-unplug-fix-6100f2323bece4fc.yaml  arista-sonic-vxlan-support-8f3a9c4b2e1d5a67.yaml  batching-12d9005924fd9d74.yaml  bug-2146497-exception-message-d1bd5f7a79b4b01d.yaml  cisco-nxos-multicast-bum-replication-2575e56f4306b49e.yaml  cisco-nxos-suppress-arp-d9d8c50b0141bcd3.yaml  cisco-nxos-vni-cleanup-fix-aeacfb2de4d7dcf1.yaml  cisco-nxos-vxlan-bgp-evpn-251dd384acac2d6f.yaml  config-dir-d5f59b536c110841.yaml  convert-netmiko-bool-params-55d86c55fc73503e.yaml  cumulus-802.3ad-da9bffe131995f98.yaml  cumulus-nvue-multicast-bum-replication-a5bf10d8517fb0ae.yaml  delete_network_postcommit-more-defensive-19929702ba7f19fb.yaml  (+36 more)
releasenotes/source/: conf.py  index.rst  train.rst
tempest_plugin/: README.rst  config.py  plugin.py
tempest_plugin/tests/common/: ovs_lib.py
tempest_plugin/tests/scenario/: test_ngs_basic_ops.py
tools/: run_bashate.sh  tox_install.sh
tools/ngs-stress/: README.rst  ngs_stress.py
zuul.d/: legacy-networking-generic-switch-jobs.yaml  networking-generic-switch-jobs.yaml  project.yaml
