[metadata]
name = networking-generic-switch
author = Mirantis
author-email = mos-ironic@mirantis.com
home-page = https://github.com/openstack/networking-generic-switch
summary = Generic Switch ML2 Neutron Driver
classifier =
    Development Status :: 3 - Alpha
    Programming Language :: Python
description-file =
    README.rst

[files]
packages =
    networking_generic_switch

[entry_points]
neutron.ml2.mechanism_drivers =
    genericswitch = networking_generic_switch.generic_switch_mech:GenericSwitchDriver
generic_switch.devices =
    netmiko_ovs_linux = networking_generic_switch.devices.netmiko_devices.ovs:OvsLinux
    netmiko_cisco_ios = networking_generic_switch.devices.netmiko_devices.cisco:CiscoIos
    netmiko_cisco_s300= networking_generic_switch.devices.netmiko_devices.cisco300:Cisco300
    netmiko_huawei = networking_generic_switch.devices.netmiko_devices.huawei:Huawei
    netmiko_huawei_vrpv8 = networking_generic_switch.devices.netmiko_devices.huawei_vrpv8:Huawei
    netmiko_arista_eos = networking_generic_switch.devices.netmiko_devices.arista:AristaEos
    netmiko_dell_force10 = networking_generic_switch.devices.netmiko_devices.dell:DellNos
    fnioa_netmiko_dell_force10 = networking_generic_switch.devices.netmiko_devices.dell_fnioa:DellNos
    netmiko_brocade_fastiron = networking_generic_switch.devices.netmiko_devices.brocade:BrocadeFastIron
    netmiko_hp_comware = networking_generic_switch.devices.netmiko_devices.hp:HPComware
    corsa_dp2100 = networking_generic_switch.devices.corsa_devices.corsa2100:CorsaDP2100
tempest.test_plugins =
    ngs_tests = tempest_plugin.plugin:NGSTempestPlugin

[pbr]
autodoc_index_modules = True
autodoc_exclude_modules =
    tempest_plugin.*

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
