[metadata]
name = networking-generic-switch
author = Mirantis
author-email = mos-ironic@mirantis.com
home-page = https://github.com/openstack/networking-generic-switch
summary = Generic Switch ML2 Neutron Driver
python-requires = >=3.6
classifier =
    Development Status :: 3 - Alpha
    Environment :: OpenStack
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

description-file =
    README.rst

[files]
packages =
    networking_generic_switch

[entry_points]
neutron.ml2.mechanism_drivers =
    genericswitch = networking_generic_switch.generic_switch_mech:GenericSwitchDriver
generic_switch.devices =
    netmiko_ovs_linux = networking_generic_switch.devices.netmiko_devices.ovs:OvsLinux
    netmiko_cisco_ios = networking_generic_switch.devices.netmiko_devices.cisco:CiscoIos
    netmiko_cisco_s300= networking_generic_switch.devices.netmiko_devices.cisco300:Cisco300
    netmiko_huawei = networking_generic_switch.devices.netmiko_devices.huawei:Huawei
    netmiko_huawei_vrpv8 = networking_generic_switch.devices.netmiko_devices.huawei_vrpv8:Huawei
    netmiko_arista_eos = networking_generic_switch.devices.netmiko_devices.arista:AristaEos
    netmiko_dell_force10 = networking_generic_switch.devices.netmiko_devices.dell:DellNos
    netmiko_dell_powerconnect = networking_generic_switch.devices.netmiko_devices.dell:DellPowerConnect
    netmiko_brocade_fastiron = networking_generic_switch.devices.netmiko_devices.brocade:BrocadeFastIron
    netmiko_ruijie = networking_generic_switch.devices.netmiko_devices.ruijie:Ruijie
    netmiko_hpe_comware = networking_generic_switch.devices.netmiko_devices.hpe:HpeComware
    netmiko_hp_comware = networking_generic_switch.devices.netmiko_devices.hpe:HpeComware
    netmiko_juniper = networking_generic_switch.devices.netmiko_devices.juniper:Juniper
    netmiko_mellanox_mlnxos = networking_generic_switch.devices.netmiko_devices.mellanox_mlnxos:MellanoxMlnxOS
tempest.test_plugins =
    ngs_tests = tempest_plugin.plugin:NGSTempestPlugin
